--- a/docs/migrating-rds-postgres.mdx
+++ b/docs/migrating-rds-postgres.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Migrating from RDS Postgres to Shared Postgres"
+icon: "dove"
 ---
 
 Since the Shuttle AWS RDS resource is only available as a paid add-on, if you cancel your
