--- a/docs/migrating-to-shuttle.mdx
+++ b/docs/migrating-to-shuttle.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Migrating to Shuttle"
 description: "Short guide on how to migrate your existing project over to Shuttle"
+icon: "dove"
 ---
 
 ## Setup
