--- a/integrations/shuttle-qdrant.mdx
+++ b/integrations/shuttle-qdrant.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Utilize Shuttle Qdrant - Vector Search in Rust"
+title: "Qdrant"
 description: "Integrate vector search capabilities into your Rust projects with Shuttle Qdrant. Our documentation outlines the process, simplifying your journey."
 icon: "database"
 ---
