--- a/introduction/docs.mdx
+++ b/introduction/docs.mdx
@@ -1,8 +1,14 @@
 ---
-title: "Shuttle Docs - Start Building Backends Fast"
+title: Start Building Backends Fast
 description: "Begin your Shuttle journey with our comprehensive documentation. Learn how Shuttle simplifies Rust cloud development through easy-to-follow guides."
 icon: "hand-wave"
 ---
+
+<Card title="New platform (Open Beta)" icon="layer-group" href="/shuttle/platform-update">
+  Shuttle is launching the new and improved version of our platform. Click to read more!
+</Card>
+
+###
 
 <CardGroup>
   <Card
