--- a/introduction/how-shuttle-works.mdx
+++ b/introduction/how-shuttle-works.mdx
@@ -72,8 +72,5 @@ The generated code from `shuttle_runtime::main` handles resource provisioning an
 
 ## More reading
 
+TODO:
 Check out the [files](/configuration/files) and [environment](/configuration/environment) sections for more details.
-
----
-
-If you wish to contribute to Shuttle and learn more about how Shuttle works under the hood, check out our [Contributing Guide](/community/contribute).
