--- a/resources/shuttle-metadata.mdx
+++ b/resources/shuttle-metadata.mdx
@@ -3,6 +3,8 @@ title: Metadata
 icon: "gear-code"
 ---
 
+{/* TODO add this back when the plugin has been reworked */}
+
 The metadata plugin allows applications to obtain certain information about their runtime environment.
 
 ## Usage
