--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -113,3 +113,5 @@ async fn main(
 ```
 
 The full example can be found on [GitHub](https://github.com/shuttle-hq/shuttle-examples/tree/main/axum/postgres).
+
+TODO limitations, limits?
