--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -23,7 +23,7 @@ This section is aimed at collecting common questions users have to provide docum
     See [Deployment environment](/configuration/environment).
   </Accordion>
   <Accordion title="Can I use frontend frameworks with Shuttle?">
-    Of course! When you deploy a project on Shuttle, your app becomes available at a URL of the form `${project_name}.shuttleapp.rs`.
+    Of course! When you deploy a project on Shuttle, your app becomes available at a URL of the form `${project_name}.shuttle.app`.
 
     With this, you can build a server that serves pretty much any frontend project.
     For details on how to serve static files with Shuttle, check out our [Deployment files docs](/configuration/files).
