--- a/templates/tutorials/websocket-chat-app-js.mdx
+++ b/templates/tutorials/websocket-chat-app-js.mdx
@@ -4,7 +4,7 @@ title: "Chat app with React & Rust"
 
 Source code can be found [here](https://github.com/joshua-mo-143/react-websocket-chat-rust).
 
-A live deployment link can be found [here](https://websocket-chat-react-rust-example.shuttleapp.rs/) if you'd like to see the end result before we start.
+A live deployment link can be found [here](https://websocket-chat-react-rust-example.shuttle.app/) if you'd like to see the end result before we start.
 
 With Rust going from strength to strength within the web development space, it is clear why many developers and big names are starting to take notice. As one example of this, Meta has recently [recommended Rust](https://engineering.fb.com/2022/07/27/developer-tools/programming-languages-endorsed-for-server-side-use-at-meta/#:~:text=Meta's%20primary%20supported%20server%2Dside,new%20addition%20to%20this%20list.) as a server-side language. If that won't make people sit up and look, then it's hard to know what will - Rust's current offering easily stands on par with most other languages that you could use in a back-end API or microservice, and it will only get better with time.
 
