--- a/community/open-source.mdx
+++ b/community/open-source.mdx
@@ -1,17 +1,14 @@
 ---
 title: "Open Source"
-description: "Shuttle is Open Source."
 icon: "osi"
 ---
 
-We are firm believers that Open Source is the key to a long-term sustainable and
-prosperous technology community. Shuttle builds on Open Source software, and is
-itself Open Source. This means that Shuttle is free to use and open to
-contributions.
+We are firm believers that Open Source is the key to a long-term sustainable and prosperous technology community.
+Shuttle CLI and Shuttle libraries build on Open Source software, and are themselves Open Source.
 
 ### License
 
-Shuttle is Open Source under the Apache License 2.0.
+The core Shuttle repositories are Open Source under the Apache License 2.0.
 
 > A permissive license whose main conditions require preservation of copyright
 > and license notices. Contributors provide an express grant of patent rights.
