--- a/docs/domain-names.mdx
+++ b/docs/domain-names.mdx
@@ -47,7 +47,8 @@ The process for other providers can vary, but here are the general steps. If you
 
 ### Root domain
 
-If you are adding a root-level domain, add an `A` record that points to the same IP address that is returned by `dig A example.shuttle.app`, which is currently `TODO`.
+If you are adding a root-level domain, add one or more `A` records that point to the same IP addresses that are returned by `dig A example.shuttle.app`:
+`13.43.102.179`, `35.176.103.249`, `3.9.87.116`.
 
 ### Subdomain
 
