feat: new platform pages

--- a/_snippets/connection-string.mdx
+++ b/_snippets/connection-string.mdx
@@ -7,4 +7,4 @@ shuttle resource list --show-secrets
 ```
 
 Using the connection string, you can connect to it for manual querying, inspection, and migration.
-You can also export/import data using a dump tool suitable for the database of choice.
+{/* You can also export/import data using a dump tool suitable for the database of choice. */}
