--- a/docs/migrating-to-shuttle.mdx
+++ b/docs/migrating-to-shuttle.mdx
@@ -4,14 +4,14 @@ description: "Short guide on how to migrate your existing project over to Shuttl
 icon: "dove"
 ---
 
-## Setup
+This example shows how to migrate an Axum app with a Postgres database.
 
 <Note>
     This guide assumes that you have Shuttle already setup.
     If you don't, head on over to our [installation](/getting-started/installation) guide.
 </Note>
 
-For this example, we'll assume you are migrating an Axum project.
+## Add Shuttle dependencies
 
 The first step is to add `shuttle-runtime` and `shuttle-axum` to your dependencies to be able to use Shuttle's runtime with the Axum framework.
 
@@ -24,13 +24,13 @@ Any [secrets](/resources/shuttle-secrets) you need to use will be kept in a `Sec
 You can also easily get a provisioned database like so (this example will be for a provisioned PostgreSQL instance specifically):
 
 ```bash
-cargo add shuttle-shared-db --features postgres
+cargo add shuttle-shared-db --features postgres,sqlx
 ```
 
 If you have any database records you'd like to keep, it would be a good idea to export them so that they can be migrated to the new database.
 **You will not need a secrets file if you only need a provisioned Postgres database - this will be automatically be provisioned and given to you in the form of a connection string or an sqlx pool.**
 
-## Migrating your Code
+## Migrate your Code
 
 To be able to run your project on Shuttle, you need to make a few changes to your code.
 Instead of the `tokio::main` macro, you will use the `shuttle_runtime::main` macro and swap out `dotenvy` for Shuttle's Postgres annotation:
@@ -42,14 +42,16 @@ This is what your `main.rs` file looks like before:
 async fn main() {
     dotenvy::dotenv().ok();
 
-    let url = dotenvy::var("DATABASE_URL").expect("No database URL was set!");
+    let db_url = dotenvy::var("DATABASE_URL").expect("No database URL was set!");
+    let secret = dotenvy::var("MY_SECRET").expect("No secret was set!");
 
-    let pool = sqlx::Pool::connect(&url).await.unwrap();
-
+    let pool = sqlx::Pool::connect(&db_url).await.unwrap();
     sqlx::migrate!()
         .run(&pool)
         .await
         .expect("Migrations failed :(");
+
+    // Use secrets for anything that needs them
 
     let router = create_api_router(pool);
     let addr = SocketAddr::from(([0, 0, 0, 0], 8000));
@@ -84,18 +86,19 @@ pub async fn axum (
 
 If you need more than a simple router, you'll want to create a custom struct that holds all of your required app state information inside and then create an `impl` for the struct - you can find more about that [here.](https://docs.shuttle.dev/tutorials/custom-service) Anything outside of your entry point function (the function that uses the `shuttle_runtime::main` macro) doesn't need to be changed. If you are using secrets as well as a database connection, you may wish to create a struct that holds both of these values and then pass it into the function that generates the router.
 
-## Deploying
+## Local run
 
-To ensure that you get a unique project name, create a `Shuttle.toml` file at the `Cargo.toml` level to name your project to whatever you like.
-
-```toml
-name = "my-unique-app-name-here"
-```
-
-Now all you need to do is to run the following commands:
+Test your app locally with:
 
 ```bash
-shuttle project start
+shuttle run
+```
+
+## Deploying
+
+Now all you need to do is to run the following command:
+
+```bash
 shuttle deploy
 ```
 
