resolve / mark todos

--- a/docs/deployment-environment.mdx
+++ b/docs/deployment-environment.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Deployment environment"
+title: "Deployment environment TODO"
 description: "Details about the environment your app runs in"
 icon: "box"
 ---
