--- a/introduction/how-shuttle-works.mdx
+++ b/introduction/how-shuttle-works.mdx
@@ -70,7 +70,4 @@ When you run `shuttle deploy`, your project code is archived and sent to our pla
 Your service is then be started on Shuttle's infrastructure on AWS in London (eu-west-2).
 The generated code from `shuttle_runtime::main` handles resource provisioning and initialization, leaving you to focus on what matters.
 
-## More reading
-
-TODO:
-Check out the [files](/configuration/files) and [environment](/configuration/environment) sections for more details.
+{/* TODO? ## More reading */}
