--- a/introduction/platform-update.mdx
+++ b/introduction/platform-update.mdx
@@ -62,6 +62,7 @@ Not all planned features are implemented yet. Here is a list of planned changes:
 - Feature parity between CLI and Shuttle Console
 - Project idling or other way to reduce compute costs
 - Customising CPU and RAM for the builder and runtime containers
+- Update the Shuttle Deploy GitHub Action
 - Deploying prebuilt shuttle-examples docker images (allows one-click deploys)
 - Streaming logs with `shuttle logs --follow` and during a `deploy` command
 - New resources, such as S3 bucket and a replacement for Shuttle Persist and Shuttle AWS RDS
