feat: github action

--- a/integrations/ci-cd.mdx
+++ b/integrations/ci-cd.mdx
@@ -4,11 +4,7 @@ description: "Streamline your Rust projects with Shuttle CI/CD"
 icon: "code-branch"
 ---
 
-{/* TODO add this page when the action is updated */}
-
-Shuttle currently provides one GitHub Action for automating deployments.
-
-## GitHub Deploy Action
+Shuttle provides a GitHub Action for automating deployments.
 
 <Frame type="glass">
   <img src="/images/shuttle-deploy-action.png" />
