--- a/introduction/docs.mdx
+++ b/introduction/docs.mdx
@@ -4,7 +4,7 @@ description: "Begin your Shuttle journey with our comprehensive documentation. L
 icon: "hand-wave"
 ---
 
-<Card title="New platform (Open Beta)" icon="layer-group" href="/shuttle/platform-update">
+<Card title="New platform (Public Preview)" icon="layer-group" href="/shuttle/platform-update">
   Shuttle is launching the new and improved version of our platform. Click to read more!
 </Card>
 
