--- a/introduction/platform-migration.mdx
+++ b/introduction/platform-migration.mdx
@@ -16,7 +16,7 @@ Make sure you have read the [Platform Update Changelog](/introduction/platform-u
 Notably:
 
 - Migrating **Shuttle Persist** is not currently possible as there is no drop-in replacement yet.
-We plan to add one in the future.
+We plan to add one soon.
 
 - Migrating **Shared MongoDB** is not possible since the feature has been dropped.
 
