--- a/guides/upgrade.mdx
+++ b/guides/upgrade.mdx
@@ -6,7 +6,7 @@ icon: "code-merge"
 
 1. Check the [release page](https://github.com/shuttle-hq/shuttle/releases) for any considerations regarding breaking changes in the new release.
 
-2. Upgrade your `cargo-shuttle` CLI with one of the options below:
+2. Upgrade your Shuttle CLI with one of the options below:
    - `shuttle upgrade` **(available in v0.48.0+)** (runs the install script below for you)
    - `curl -sSfL https://www.shuttle.dev/install | bash` (Linux and macOS)
    - `iwr https://www.shuttle.dev/install-win | iex` (Windows)
