fix broken links, delete unused pages

--- a/docs/deployment-environment.mdx
+++ b/docs/deployment-environment.mdx
@@ -16,7 +16,7 @@ If you need more compute out of the gate, reach out to us.
 ## Environment variables
 
 These are the environment variables set in the Shuttle runtime container.
-Check for `SHUTTLE=true` or use [the shuttle feature flag](./project-structure#cargo-feature-flags) for custom behavior when running on Shuttle.
+Check for `SHUTTLE=true` or use [the shuttle feature flag](./project-configuration#cargo-feature-flags) for custom behavior when running on Shuttle.
 
 ```bash
 SHUTTLE="true"
