--- a/getting-started/quick-start.mdx
+++ b/getting-started/quick-start.mdx
@@ -26,7 +26,7 @@ For your first project, try a Hello World template.
 shuttle init
 ```
 
-You can then `cd` into the created folder and run your app locally. Check out the [local run](./local-run) page for more.
+You can then `cd` into the created folder and run your app locally. Check out the [local run](/docs/local-run) page for more.
 
 ```sh
 shuttle run
