--- a/guides/cli.mdx
+++ b/guides/cli.mdx
@@ -45,14 +45,14 @@ Use the global `--debug` flag to print detailed debug output.
 
 ### Get started
 
-- `cargo install cargo-shuttle`: For more alternatives, see [Installation](./installation).
+- `cargo install cargo-shuttle`: For more alternatives, see [Installation](/getting-started/installation).
 - `shuttle login`: Open the Shuttle Console and paste the API key to log in.
 - `shuttle init`: Log in and initialize a project.
 - `shuttle account`: Check account details.
 
 ### Local run
 
-For more tips, see [Local Run](./local-run).
+For more tips, see [Local Run](/docs/local-run).
 
 - `shuttle run`: Run the project locally so you can test your changes.
 - `shuttle run --port 8080`: Change the local port.
@@ -72,8 +72,8 @@ For more tips, see [Local Run](./local-run).
 <Tip>
 All project-related commands can use:
 - `--working-directory <path>` or `--wd <path>` to execute the command in a different folder.
-- `--name <name>` to specify project name explicitly (see [Project name](/configuration/project-name)).
-- `--id <id>` to specify project id explicitly (see [Project name](/configuration/project-name)).
+- `--name <name>` to specify project name explicitly (see [Project](/docs/projects#project-name-and-id)).
+- `--id <id>` to specify project id explicitly (see [Project](/docs/projects#project-name-and-id)).
 </Tip>
 
 - `shuttle project list`: List your projects.
