--- a/introduction/how-shuttle-works.mdx
+++ b/introduction/how-shuttle-works.mdx
@@ -62,7 +62,7 @@ async fn main(
 }
 ```
 
-For more info on resources, head on over to our [Resources](/resources/overview) section.
+For more info on resources, head on over to our [Resources](/resources/resources) section.
 
 ## Deploying your Project
 
