--- a/introduction/what-is-shuttle.mdx
+++ b/introduction/what-is-shuttle.mdx
@@ -53,4 +53,4 @@ If you need a custom service, you can take a look at our guide [right here](/tem
 
 One of the great features of Shuttle is the provisioning of resources through macros.
 With just a few lines of code, you can get access to [Postgres databases](/resources/shuttle-shared-db) and more.
-Check the [Resources](/resources/overview) section for a full overview.
+Check the [Resources](/resources/resources) section for a full overview.
