--- a/support/troubleshooting.mdx
+++ b/support/troubleshooting.mdx
@@ -7,7 +7,7 @@ This section is aimed at collecting common issues users have to provide quick de
 
 <AccordionGroup>
   <Accordion title="I've updated Shuttle and my project isn't working anymore.">
-    Make sure to follow all of the [upgrading steps](/configuration/shuttle-versions#upgrading-shuttle-version).
+    Make sure to follow all of the [upgrading steps](/guides/upgrade).
   </Accordion>
   <Accordion title="I get os error 2 when trying to load up my project">
     This is most likely to happen if you're using one of our shared database annotations. To prevent this from happening, ensure that Docker is running.
