--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -13,16 +13,16 @@ This section is aimed at collecting common questions users have to provide docum
   </Accordion>
   <Accordion title="What happens when I deploy to Shuttle?">
     Your code is built and hosted on our servers. The first time you introduce additional resources in your code, like the first time you use a database, we will add that resource to your project and wire it automatically to your deployment.
-    Read about what happens to deployment files [here](/configuration/files).
+    Read about what happens to deployment files [here](/docs/files).
   </Accordion>
   <Accordion title="Which version of Rust will my project be compiled with?">
-    See [Deployment environment](/configuration/environment).
+    See [Deployment environment](/docs/deployment-environment).
   </Accordion>
   <Accordion title="Can I use frontend frameworks with Shuttle?">
     Of course! When you deploy a project on Shuttle, your app becomes available at a public URL.
 
     With this, you can build a server that serves pretty much any frontend project.
-    For details on how to serve static files with Shuttle, check out our [Deployment files docs](/configuration/files).
+    For details on how to serve static files with Shuttle, check out our [Deployment files docs](/docs/files).
 
     You can also just use it for an API, and host your frontend on any of the common frontend hosting solutions (Vercel, Netlify, etc), you just have to make your API calls to the URL of your project, and you're up.
 
